# MN-SLA

./: .gitattributes  .gitignore  CLAIMS_FROM_RESULTS.md  IAA标注方法与IAA标注数据集.md  MN-SLA_NeurIPS_MainTrack_Spotlight_实验推进路线图.md  MN-SLA_实验设置与实验结果总报告_对应路线图与AAAI计划.md  MN-SLA后续稳拿AAAI_MainTrack实验计划.md  NARRATIVE_REPORT.md  NOVELTY_CHECK_REPORT.md  PAPER_PLAN.md  PAPER_WRITING_REPORT.md  README.md  REVIEW_STATE.json  mn_sla_required_experiments_and_packaging_plan.md  pyproject.toml  requirements.txt
artifacts/: README.md
configs/: accepted_baselines.yaml  baselines.yaml
paper/: compile_status.md  iclr2026_conference.sty  main.tex  math_commands.tex  references.bib
scripts/: analyze_expanded_human_iaa_20260603.py  analyze_human_neutral_annotations.py  analyze_overlap_human_iaa_20260601.py  analyze_pku2k_full_diagnostic_20260508.py  fetch_official_repos.ps1  generate_e5_accuracy_invariance_figure.py  generate_e6_score_level_analysis_20260603.py  generate_hard_v3_breakdowns.py  generate_hard_v3_local_audit.py  generate_hard_v3_slice_inference.py  generate_human_neutral_annotation_packet.py  generate_mn_sla_completion_and_release_audit_20260602.py  generate_mn_sla_roadmap_completion_audit_20260602.py  generate_mnsla_power_curve_figure.py  generate_neutral_control_consistency_gate.py  generate_neutral_control_validity_audit.py  generate_paper_figures.py  generate_projection_ablation.py  make_toy_data.py  merge_jsonl_unique_20260603.py  prepare_prediction_remainder_20260603.py  remote_run_non_pku_dynaguard_20260507.sh  remote_run_pku2k_full_dynaguard_20260508.sh  run_llamaguard.py  (+5 more)
(+105 files in other folders)
