[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sycophancy-guard"
version = "0.1.0"
description = "Pressure-robust safety judge experiments"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.44",
  "accelerate>=0.33",
  "datasets>=2.20",
  "scikit-learn>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "huggingface-hub>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

